# flower_serial

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.c  ws_client.cpp  ws_server.cpp
docs/: ws_api.md
docs/requirement/: serial.md
include/: device.h  relay.h  result.h  serial.h  soil.h
src/: CMakeLists.txt  device.c  relay.c  serial.c  soil.c
